Bug 627594 - flush layout when working with percentage units r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D190270